# Solana-Historic-Data

./: README.md
tx_query/: Cargo.toml
tx_query/src/: get_total_tx.rs  main.rs  tx_details.rs  tx_history.rs
