[package]
name = "tx_query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.17.7"
solana-sdk = "1.17.7"
solana-transaction-status = "1.17.7"
serde_json = "1.0"
mongodb = "2.0"
tokio = { version = "1.0", features = ["full"] }
